--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="https://res.cloudinary.com/dfmsezslx/image/upload/v1700522308/TECDE/RefriActive_Img_zfhpl2.png" />
+  <link rel="icon" href="https://res.cloudinary.com/dfmsezslx/image/upload/v1701212781/Isologonegro_r0r96g.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Admin RefriActive ByG" />
-  <link rel="apple-touch-icon" href="https://res.cloudinary.com/dfmsezslx/image/upload/v1700522308/TECDE/RefriActive_Img_zfhpl2.png" />
+  <meta name="description" content="Admin Cobra Tech" />
+  <link rel="apple-touch-icon" href="https://res.cloudinary.com/dfmsezslx/image/upload/v1701212781/Isologonegro_r0r96g.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>RefriActive ByG - Admin</title>
+  <title>Admin- CobraTech</title>
 </head>
 
 <body>
